methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:3: error: not found: value gau
  fleur34();gauche();avance();avance();droite();recule();recule();recule();recule();fleur5();droite();avance();avance();gau che();recule();recule();
                                                                                                                        ^